--- a/repo-1/buildspec-1.yml
+++ b/repo-1/buildspec-1.yml
@@ -27,10 +27,10 @@ phases:
       - echo "  }" >> provider-output-backend.tf
       - echo "}" >> provider-output-backend.tf
       - cat provider-output-backend.tf
-      - . /tmp/aws_cred_export.txt && terraform init
+      - terraform init
   build:
     commands:
-      - . /tmp/aws_cred_export.txt &&  python runterraform.js.py $region $applicationname $destroy
+      - terraform plan
       - echo "Post apply build"
   post_build:
     commands:
